--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -5,3 +5,9 @@
 .sapMDialog.sapMMessageDialog{
     margin-top: 10rem !important;
 }
+.formNoTitle h6{
+    display: none;
+    }
+    .zspace {
+        margin-right: 1rem;
+    }
